@@ -3,6 +3,7 @@
 =app-arch/p7zip-9.13
 =app-arch/p7zip-9.13-r1
 =app-arch/p7zip-9.13-r3
+=app-arch/p7zip-9.20.1
 =app-backup/keep-0.4.0-r1
 =app-cdr/k3b-1.0.5-r6
 =app-cdr/kcdlabel-2.13-r1
@@ -613,6 +614,7 @@
 =net-analyzer/ksniffer-0.3.2
 =net-dns/avahi-0.6.28-r1
 =net-dns/avahi-0.6.29
+=net-dns/avahi-0.6.30
 =net-firewall/knetfilter-3.5.0
 =net-im/kmess-1.5.1
 =net-im/kmess-1.5.2
