@@ -4,7 +4,9 @@ AUX avahi-0.6.28-CVE-2011-1002.patch 2076 RMD160 0b561a78e75099a14e7a3da5290cd1f
 AUX netlink-request-all-matches-when-requesting-interface.patch 1634 RMD160 3995e26dca6ec1cb4801159c479c0b591eff5da3 SHA1 e234d6bd96b7adaf543ef7583b6dd90538238608 SHA256 163db2141b278a07433e7d1b51227493555ca7ba1faf2d19c97e20aa51b947cd
 DIST avahi-0.6.28.tar.gz 1238660 RMD160 d61b370baa3f25d57efba43f2c34b54cab7e7e9e SHA1 5da3f7da2cff8ddf74f8746e4dcb2524e5047f67 SHA256 a0d80aac88212b9f9d5331c248091d3c9c9209f0e41985421636ebd14230fc91
 DIST avahi-0.6.29.tar.gz 1244081 RMD160 a0a4e1019cafb53a683ceceaa44605873957b6cd SHA1 af13ae6fdb3cd61b2eafa25a108773156d88b362 SHA256 4eb1a6bdc93f1b245fc1b26ff6a79f5f958c1135c04bff60d36d374d98cc14d8
+DIST avahi-0.6.30.tar.gz 1243534 RMD160 99dbc4f5711fd2962ac657811bebdb63947bd2c1 SHA1 5b77443537600a00770e4c77e3c443eeb5861d06 SHA256 f9e4316c2339d0020726edd846d01bee0c39980906db0c247479e5807457ff1f
 EBUILD avahi-0.6.28-r1.ebuild 4966 RMD160 47ba572f4480b3bea49236fdd827fc06d17c7e3c SHA1 700c711bb955724c97d069eb666bfd371291a4da SHA256 56685b8e760f0326fc3e3c7522650053d5115494e2f836eed411b99a688ee5c2
 EBUILD avahi-0.6.29.ebuild 4845 RMD160 b7eeae605f34a536c6dfd0d0a4ea766752b8e158 SHA1 d568b8ab8037216b9a3bd9e2d031a409347267ff SHA256 34c5691642d73bc50f3ccb4a9026e880b890573df3f9be8f86b3bbab9cdabf47
-MISC ChangeLog 30161 RMD160 e9b632ee6bc0041d87356bee452609199c0e9a59 SHA1 cc9883e834fe699307534bcdf0095b005dcfa1e5 SHA256 fc0d4d9dea48441e01aee1c97d3a52684aa5acacc0ebe35aa6e8a793d79e4fd6
+EBUILD avahi-0.6.30.ebuild 4845 RMD160 04945aa93690ab16c69b2b81456b587934bab22b SHA1 7fd181fd5eb10d55bcaac93448697af83990935f SHA256 920b93d4a59811976a7fc9187858171eaae44968d87623d4a8f36415a282cf44
+MISC ChangeLog 30279 RMD160 575e487cf5d83628f96f6a6bd76a9d6078a0eac7 SHA1 8368e88a82a8ca40fb4942969deefcb656e21ebb SHA256 56973afc8ffd97c84e73451f33dfb6280bbf1c149ae610cd11a8069b99b8435f
 MISC metadata.xml 609 RMD160 fa4efaaf9b8ac6d75251c9bd1f0721ea175acda9 SHA1 4532738c9ff6d9d2a2aef226b827919ac31be2de SHA256 365224bb3c21c159a89fa03ea08c534eb27cc2df62012a69e03ad81779607faa
