@@ -1,6 +1,11 @@
 # ChangeLog for net-dns/avahi
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.202 2011/03/17 07:14:41 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.203 2011/04/06 20:09:43 swegener Exp $
+
+*avahi-0.6.30 (06 Apr 2011)
+
+  06 Apr 2011; Sven Wegener <swegener@gentoo.org> +avahi-0.6.30.ebuild:
+  Version bump.
 
   17 Mar 2011; Sven Wegener <swegener@gentoo.org>
   files/netlink-request-all-matches-when-requesting-interface.patch:
